@startuml
' Definição de estilo
skinparam classAttributeIconSize 0
skinparam style strictuml
hide empty members

' Título do Diagrama
title Diagrama de Classes Conceitual - Gestão de Monitoria IBMEC

' --- Classes ---

class Usuario {
  +id
  +nome
  +email
  +senha
}

class Aluno extends Usuario {
  +matricula
  +curso
  +historicoAcademico
}

class Coordenador extends Usuario {
  +departamento
}

class Professor extends Usuario {
  +titulacao
  +departamento
  +disciplinas
}

class Vaga {
  +id
  +titulo
  +descricao
  +requisitos
  +status
}

class Candidatura {
  +id
  +dataSubmissao
  +status
}

class Notificacao {
  +id
  +mensagem
  +dataEnvio
  +status
}

' --- Relacionamentos ---

Coordenador "1" -- "0..*" Vaga : gerencia >
Vaga "1" -- "0..*" Candidatura : recebe <
Aluno "1" -- "0..*" Candidatura : submete >
Coordenador "1" -- "0..*" Candidatura : analisa >
Usuario "1" -- "0..*" Notificacao : recebe >
Professor "0..*" -- "0..*" Aluno : orienta >
Professor "1" -- "0..*" Candidatura : orientaEnvia >

@enduml